--- a/package.json
+++ b/package.json
@@ -37,21 +37,26 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "^12.0.2",
+    "electron-squirrel-startup": "^1.0.0"
+  },
+  "dependencies": {
     "express": "^4.17.1",
     "ip": "^1.1.5",
     "robotjs": "^0.6.0"
   },
-  "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
-  },
   "config": {
     "forge": {
-      "packagerConfig": {},
+      "packagerConfig": {
+        "icon": "./icons/mac/icon.icns",
+        "name": "Skyfallen AirCode",
+        "productName":"AirCode",
+        "appBundleId":"com.theskyfallen.aircodeserver"
+      },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-            "name": "skyfallenaircode"
+            "name": "Skyfallen AirCode"
           }
         },
         {
