--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "^12.0.2",
+    "electron-prebuilt-compile": "^8.2.0",
     "electron-squirrel-startup": "^1.0.0"
   },
   "dependencies": {
@@ -49,14 +50,14 @@
       "packagerConfig": {
         "icon": "./icons/mac/icon.icns",
         "name": "Skyfallen AirCode",
-        "productName":"AirCode",
-        "appBundleId":"com.theskyfallen.aircodeserver"
+        "productName": "AirCode",
+        "appBundleId": "com.theskyfallen.aircodeserver"
       },
       "makers": [
         {
           "name": "@electron-forge/maker-squirrel",
           "config": {
-	          "icon": "./icons/win/icon.ico",
+            "icon": "./icons/win/icon.ico",
             "name": "AirCode"
           }
         },
