--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "^12.0.2",
-    "electron-prebuilt-compile": "^8.2.0",
+    "electron-prebuilt-compile": "8.2.0",
     "electron-squirrel-startup": "^1.0.0"
   },
   "dependencies": {
