--- a/package.json
+++ b/package.json
@@ -37,18 +37,18 @@
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
     "electron": "^12.0.2",
-    "electron-prebuilt-compile": "8.2.0",
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-prebuilt-compile": "8.2.0"
   },
   "dependencies": {
     "express": "^4.17.1",
     "ip": "^1.1.5",
-    "robotjs": "^0.6.0"
+    "robotjs": "^0.6.0",
+    "electron-squirrel-startup": "^1.0.0"
   },
   "config": {
     "forge": {
       "packagerConfig": {
-        "icon": "./icons/mac/icon.icns",
+        "icon": "./icons/win/icon.ico",
         "name": "Skyfallen AirCode",
         "productName": "AirCode",
         "appBundleId": "com.theskyfallen.aircodeserver"
